# gpu-science-lab

./: CMakeLists.txt  README.md  gpu_reaction_diffusion.py
src/: GLView.cpp  GLView.h  MainWindow.cpp  MainWindow.h  SimulationCuda.cu  SimulationCuda.h  main.app
